--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
         <downloadSources>true</downloadSources>
         <downloadJavadocs>true</downloadJavadocs>        
     </properties>    
@@ -18,11 +18,10 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
-        <dependency>
+     <dependency>
             <groupId>org.ow2.asm</groupId>
-            <artifactId>asm-all</artifactId>
-            <version>5.1</version>
-            <!--<classifier>sources</classifier>-->
+            <artifactId>asm-debug-all</artifactId>
+            <version>6.0_ALPHA</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -32,7 +31,7 @@
          <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
